@@ -9,6 +9,7 @@ Features
 * Put the current language’s feed links first so that feed readers
   prefer it (Issue #3248)
 * Added support for default preview image for posts (Issue #3326)
+* Added support for thumbnails in gallery lists (Issue #1771)
 
 Bugfixes
 --------
